--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Feb  6 18:55:37 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/xm_internal.[ch]: applied patch from Shigeki Sakamoto to 
+	  add/change/delete a Disk/NIC of an inactive domains
+
 Wed Feb  6 17:22:34 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/qemu_conf.c: applied 2 patches from Guido Guenther to avoid 
