--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Feb  7 10:47:44 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* python/libvir.c: apply patch from Cole Robinson to provide
+	  return values for manulally written python bindings.
+
 Thu Feb  7 10:29:57 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/libvirt.c: fix bug in xenUnifiedDomainSuspend() patch provided
