--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Feb  7 20:19:19 CET 2008 Jim Meyering  <meyering@redhat.com>
+
+	* autobuild.sh: Run "make syntax-check", so the autobuilder does this.
+
 Thu Feb  7 18:02:22 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* qemud/remote.c: fix a missing ')' introduced earlier
