--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Wed Feb 20 10:23:27 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/virsh.c: Added convenience methods for creating pools
+	and volumes without XML
+	* src/buf.c, src/buf.h, src/libvirt_sym.version: Export the
+	virBuffer* methods to virsh
+	* src/xend_internal.c, src/xm_intenral.c, src/xml.c,
+	src/qemu_conf.c
+	* src/util.c, src/util.h: Export virStrToLong_ull to virsh
+
 Wed Feb 20 10:22:27 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/virsh.c: Added commands for all storage APIs
