--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Wed Feb 20 10:32:27 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* configure.in: Add check for selinux library
+	* libvirt.spec.in: Add BuildRequires on libselinux-devel
+	* src/Makefile.am, tests/Makefile.am: Add selinux build flags
+	* src/storage_backend.c, src/storage_backend.h: Add some
+	helper routines for storage backend impls
+
 Wed Feb 20 10:26:27 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* Makefile.maint: Add virStorageReportError to locale check rule
