--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Wed Feb 20 10:39:27 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* configure.in: Added checks for LVM tools
+	* docs/storage/pool-logical.xml: Example XML description
+	* libvirt.spec.in: Added dep on LVM tools
+	* po/POTFILES.in: Added storage_backend_logical.c
+	* src/Makefile.am, src/storage_backend.c,
+	src/storage_backend_logical.c, src/storage_backend_logical.h:
+	Added logical volume backend
+
 Wed Feb 20 10:32:27 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* configure.in: Add checks for mount/unmount/qemu-img/qcow-create
