--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Wed Feb 20 10:44:27 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* configure.in: Added check for iscsiadm tool
+	* libvirt.spec.in: Added dep on iscsi-initiator-utils
+	* po/POTFILES.in: Added storage_backend_iscsi.c
+	* src/Makefile.am, src/storage_backend.c,
+	src/storage_backend_iscsi.c, src/storage_backend_iscsi.h:
+	Added iSCSI storage pool backend
+
 Wed Feb 20 10:42:27 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/qemud.c: Set close-on-exec flag for signal pipe
