--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Feb 20 10:49:27 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/test.c: no-op stub impl of storage APIs
+
 Wed Feb 20 10:46:27 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* configure.in: Added check for parted tool & libraries
