--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Feb 21 19:22:10 CET 2008 Jim Meyering <meyering@redhat.com>
+
+	Handle failed openvzLocateConfDir.
+	* src/openvz_conf.c (openvzLocateConfDir, openvzGetVPSUUID):
+	(openvzSetUUID): Don't dereference NULL upon failure.
+
 Thu Feb 21 15:17:00 UTC 2008 Richard W.M. Jones <rjones@redhat.com>
 
 	Fix double-free in OpenVZ driver.
