Move safewrite and saferead to a separate file.
We currently use safewrite from inside libvirt and don't want to publish
any such function name.  However, we do want to use it in applications
like virsh, libvirtd and libvirt_proxy that link with libvirt.  To that
end, this change moves that function definition (along with the nearly
identical saferead) into a new file, util-lib.c.  To avoid maintaining
separate copies of even such small functions, we simply include that new
file from util.c.  Then, the separate applications that need to use
safewrite simply compile and link with util-lib.c.

Of course, this does mean that each of those applications will
containing two copies of these functions.  However, the functions
are so small that it's not worth worrying about that.

* src/util.c (saferead, safewrite): Move function definitions to
util-lib.c and include that .c file.
* src/util-lib.c (saferead, safewrite): New file.  Functions from src/util.c
with slight change (s/int r =/ssize_t r =/) to reflect read/write return type.
* src/util-lib.h: Declare the two moved functions.
* src/util.h: Remove declarations.  Include src/util-lib.h.
* proxy/Makefile.am (libvirt_proxy_SOURCES): Add src/util-lib.c.
* qemud/Makefile.am (libvirtd_SOURCES): Likewise.
* src/Makefile.am (virsh_SOURCES): Add util-lib.c.  Remove some SP-before-TAB.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 Fri Feb 22 13:32:11 CET 2008 Jim Meyering <meyering@redhat.com>
 
+	Move safewrite and saferead to a separate file.
+	* src/util.c (saferead, safewrite): Move function definitions to
+	util-lib.c and include that .c file.
+	* src/util-lib.c (saferead, safewrite): New file.
+	Functions from src/util.c with slight change (s/int r =/ssize_t r =/)
+	to reflect read/write return type.
+	* src/util-lib.h: Declare the two moved functions.
+	* src/util.h: Remove declarations.  Include src/util-lib.h.
+	* proxy/Makefile.am (libvirt_proxy_SOURCES): Add src/util-lib.c.
+	* qemud/Makefile.am (libvirtd_SOURCES): Likewise.
+	* src/Makefile.am (virsh_SOURCES): Add util-lib.c.
+	Remove some SP-before-TAB.
+
 	With --enable-iptables-lokkit=no, avoid warning about unused parameter.
 	* src/iptables.c (iptRulesSave) [!ENABLE_IPTABLES_LOKKIT]:
 	Mark parameter as used.
