--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Feb 28 12:16:39 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/qemu_conf.c: applied patch from Cole Robinson to use virErrorMsg
+	  in qemudReportError.
+
 Wed Feb 27 20:21:35 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/bridge.c, src/bridge.h, src/qemu_conf.c: Set mac address
